--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --point-color-variant: #FBF7EC;
     --primary-color: #0d0d0d;
     --main-font: 'Mulish', sans-serif;
+    --color-white: #f1f1f1;
  }
 
  * {
