--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,7 @@
     border-bottom: solid 1px var(--primary-color);
     z-index: 999;
     background: #fff;
+    padding-top: 30px;
 }
 
     .header-container {
@@ -115,6 +116,7 @@
 
         .header_menu {
             cursor: pointer;
+            padding: 15px 0;
         }
         .header_menu:hover {
             text-decoration: underline;
@@ -129,7 +131,7 @@
                 width: 100vw;
                 height: 300px;
                 left: 0;
-                top: 125px;
+                top: 123px;
                 padding: 40px 120px;
                 overflow: hidden;
 
@@ -147,7 +149,7 @@
                 width: 100vw;
                 height: 300px;
                 left: 0;
-                top: 125px;
+                top: 123px;
                 padding: 40px 130px;
                 overflow: hidden;
 
@@ -236,7 +238,8 @@
         display: none;
     }
     #header { 
-        border-bottom: 1px solid transparent
+        border-bottom: 1px solid transparent;
+
     
     }
     .header-container {
