--- a/css/header.css
+++ b/css/header.css
@@ -238,8 +238,9 @@
         display: none;
     }
     #header { 
-        border-bottom: 1px solid transparent;
-
+        border-bottom: none;
+        padding-top: 0; 
+        height: 60px;
     
     }
     .header-container {
@@ -251,8 +252,8 @@
 
     .header-top {
         padding: 30px 20px;
-        border-bottom: 1px solid var(--primary-color)
-
+        border-bottom: 1px solid var(--primary-color);
+        
     }
     .mobile-header-top-left {
         display: flex;
@@ -278,9 +279,9 @@
 
     .header-bottom {
         width: 100%;
-        height: 110px;
+        height: 100px;
         padding: 0;
-        background: #ddd;
+        
     }
 
     .mobile-container {
@@ -289,7 +290,12 @@
         top: 0;
         display: flex;
         width: 100%;
-        height: 110px;
+        height: 100px;
+        background: #fff;
+    }
+
+    .mobile-container.out {
+      display: none;
     }
     
     .slide-menu-box {
