--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
         position: absolute;
         left: 0;
         top: 0;
+        
 
         display: flex;
         flex-flow: column;
@@ -41,6 +42,8 @@
             margin-bottom: 50px;
         }
         .banner-button-box {
+            position: relative;
+            clear: both;
             display: flex;
             gap: 25px;
         }
@@ -83,6 +86,8 @@
     }
 
 
+
+
 /* 모바일 화면 */
 @media all and (max-width: 800px) {
     .pc_main_img {
@@ -97,7 +102,7 @@
         width: 100%;
         height: 100%;
         left: 0;
-        top: 200px;
+        top: 160px;
     }
 
     .main-img-container {
@@ -149,11 +154,8 @@
        height: 50px;
        line-height: 50px;
        border-radius: 50px;
-       border: 1px solid var(--point-color);
-       background: var(--point-color);
-       color: var(--point-color-variant);
        font-size: 0.9rem;
-        text-align: center;
+       text-align: center;
     }
     .row_info_pc {
         display: none;
@@ -163,4 +165,13 @@
         border-top: 1px solid var(--primary-color);
         border-bottom: 1px solid var(--primary-color);
     }
+    /* 여백 설정 */
+    .blank_h80 {
+        display: none;
+    }
+    .m_blank_h30 {
+        display: block;
+    }
+
+
 }
