--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,18 @@ a:hover {
     text-decoration: none;
 }
 
+button {
+    border: 1px solid var(--point-color);
+    background: var(--point-color);
+    color: var(--point-color-variant);
+    cursor: pointer
+}
+
+button:hover {
+    background: var(--point-color-variant);
+    color: var(--point-color);
+}
+
 
 .material-symbols-outlined {
   font-variation-settings:
@@ -40,4 +52,19 @@ a:hover {
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+/* 여백 height 80px */
+.blank_h80 {
+    width: 100%;
+    height: 80px;
+}
+
+.m_blank_h30 {
+    width: 100%;
+    height: 30px;
+    display: none;
+}
+/* 섹션 타이틀하고 소개글 */
+.section_title  {
+    font-size: 2.8rem;
 }
