--- a/css/style.css
+++ b/css/style.css
@@ -66,5 +66,12 @@ button:hover {
 }
 /* 섹션 타이틀하고 소개글 */
 .section_title  {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
+}
+
+/* 모바일 */
+@media all and (max-width: 800px) {
+    .section_title  {
+        font-size: 2rem;
+    }
 }
