--- a/css/footer.css
+++ b/css/footer.css
@@ -97,13 +97,37 @@
             padding: 2rem;
             row-gap: 50px;
         }
+        .footer-left-content {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr;
+            justify-content: center;
+            align-items: flex-start;
+            column-gap: 30px;
+        }
         .footer-right-conetnet {
             display: flex;
             flex-flow: column;
             position: relative;
         }
+        .footer-con-title {
+            font-size: 1rem;
+            white-space: nowrap;
+        }
+        .footer-con-list > li {
+            margin: 8px 0;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 0.8rem;
+        }
+        .footer-con-list > li > span {
+            font-size: 0.8rem;
+        }
 
-        
+        .footer-right-title {
+            font-size: 1rem;
+        }
         .footer-right-text {
             max-width: 100%;
         }
