--- a/css/product.css
+++ b/css/product.css
@@ -35,3 +35,63 @@
         .product-img {
             width: 48%;
         }
+
+        .product-info-container {
+            width: 40%;
+            height: 1400px;
+            display: flex;
+            flex-flow: column;
+            align-items: center;
+            padding: 0 1rem;
+        }
+
+            .info_text_01 {
+                width: 100%;
+                height: 50px;
+                line-height: 50px;
+                display: flex;
+                justify-content: space-between;
+            }
+
+                .product_name {
+                    font-size: 1.8rem;
+                }
+                .product_price{
+                    font-size: 1.5rem;
+                }
+            .info_text_02 {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                color: #aaa;
+                font-size: 1rem;
+            }
+
+            .info_text_03 {
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                display: flex;
+                align-items: center;
+                column-gap : 10px;
+            }
+                .review-star {
+                    width: 100px;
+                }
+
+                .rate {
+                    font-size: 1rem;
+                    color: #aaa;
+                }
+            .add-btn {
+                width: 100%;
+                height: 60px;
+                line-height: 60px;
+                text-align: center;
+                margin-top: 30px;
+            }
+            .add-btn > button {
+                width: 100%;
+                height: 60px;
+                border-radius: 30px;;
+            }
