--- a/css/review.css
+++ b/css/review.css
@@ -20,7 +20,7 @@
         .slide-btn > span {
             font-size: 2.5rem;
             color: #333;
-            cursor: pointer;
+            /* cursor: pointer; */
         }
 
         #btn-off {
