모바일 화면 비율 수정
헤더 수정, 나머지 수정 예정

--- a/css/header.css
+++ b/css/header.css
@@ -242,6 +242,7 @@
         display: none;
     }
     #header { 
+        width: 100%;
         border-bottom: none;
         padding-top: 0; 
         height: 60px;
