--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@
         gap: 25px;
     }
     .banner-button-box > button {
-       width: 400px;
+       width: 90%;
        height: 50px;
        line-height: 50px;
        border-radius: 50px;
