슬라이드 추가 시작

--- a/css/product.css
+++ b/css/product.css
@@ -222,6 +222,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                cursor: pointer;
             }
             .info-button {
                 width: 23%;
