--- a/css/new.css
+++ b/css/new.css
@@ -20,7 +20,25 @@
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: minmax(200px, 500px);
         column-gap: 15px;
+        position: relative;
+        left: 0;
+        flex-shrink: 0;
+
     }
+    /* slide용 css */
+    .slide_wrap {
+        width: 100%;
+        height: 500px;
+    }
+    .slide_all {
+        width:100%;
+        height: 500px;
+        display: flex;
+        flex-flow: nowrap;
+        column-gap: 15px;
+        overflow: hidden;
+    }
+
         .new {
          width: 100%;
          height: 100%;
