--- a/css/new.css
+++ b/css/new.css
@@ -1,6 +1,7 @@
 /* new arrivals */
 .new-arrivals {
     width: 100%;
+    height: auto;
     position: relative;
     clear: both;
     padding: 2rem;
@@ -13,30 +14,96 @@
         height: 100px;
     }
        
-
     .new-bottom {
         width: 100%;
+        height: auto;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: minmax(200px, 500px);
+        grid-template-rows: minmax(200px, 400px);
         column-gap: 15px;
+        flex-shrink: 0;
         position: relative;
         left: 0;
-        flex-shrink: 0;
-
+        transition: all 1s;
     }
+
+    .slide_page_02 {
+        width: 100%;
+        height: auto;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: minmax(200px, 400px);
+        column-gap: 15px;
+        flex-shrink: 0;
+        position: relative;
+        left: 0;
+        transition: all 1s;
+    }
+
+
+
     /* slide용 css */
     .slide_wrap {
+        position: relative;
+        clear: both;
         width: 100%;
-        height: 500px;
+        height: 400px;
     }
     .slide_all {
+        position: relative;
+        clear: both;
         width:100%;
-        height: 500px;
+        height: 400px;
         display: flex;
         flex-flow: nowrap;
         column-gap: 15px;
         overflow: hidden;
+    }
+
+    .slide_wrap_02 {
+        position: relative;
+        clear: both;
+        width: 100%;
+        height: 400px;
+    }
+    .slide_all_02 {
+        position: relative;
+        clear: both;
+        width:100%;
+        height: 400px;
+        display: flex;
+        flex-flow: nowrap;
+        column-gap: 15px;
+        overflow: hidden;
+    }
+    .slide-btn {
+        display: flex;
+        column-gap: 10px;
+    }
+    .slide-btn > span {
+        font-size: 2.5rem;
+        color: #797979;
+        cursor: pointer;
+        display: block;
+    }
+
+    .slide-btn .btn-on {
+        color: #0d0d0d;
+    }
+
+    .slide-btn-02 {
+        display: flex;
+        column-gap: 10px;
+    }
+    .slide-btn-02 > span {
+        font-size: 2.5rem;
+        color: #797979;
+        cursor: pointer;
+        display: block;
+    }
+
+    .slide-btn-02 .btn-on {
+        color: #0d0d0d;
     }
 
         .new {
@@ -66,7 +133,7 @@
             .new_item_name {
                 grid-area: name;
                 padding: 10px 0;
-                font-size: 1rem;
+                font-size: 0.9rem;
                 font-weight: bold;
             }
 
@@ -97,13 +164,33 @@
         width: 100%;
         margin-bottom: 10px;
     }
-    .new-bottom {
+
+    
+    .new-top > .slide-btn-02 {
+        display: flex;
+        justify-content: flex-end;
         width: 100%;
+        margin-bottom: 10px;
+    }
+    .slide-btn > span {
+        font-size: 2rem;
+    }
+
+    .slide-btn-02 > span {
+        font-size: 2rem;
+    }
+    .new-bottom {
+        /* width: 100%; */
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: minmax(200px, 300px);
+        grid-template-rows: minmax(200px, auto);
         column-gap: 15px;
     }
+
+    .new:nth-child(3), .new:nth-child(4) {
+        display: none;
+    }
+ 
     .new {
         width: 100%;
         height: 100%;
@@ -135,11 +222,33 @@
     }
 
     
-    
-    .new:nth-child(3) {
-        display: none;
+   
+
+    /* 슬라이드 관련 */
+    .slide_wrap {
+        width: 100%;
+        height: 300px;
     }
-    .new:nth-child(4) {
-        display: none;
+    .slide_all {
+        width:100%;
+        height: 300px;
+        display: flex;
+        flex-flow: nowrap;
+        column-gap: 15px;
+        overflow: hidden;
     }
+
+    .slide_wrap_02 {
+        width: 100%;
+        height: 300px;
+    }
+    .slide_all_02 {
+        width:100%;
+        height: 300px;
+        display: flex;
+        flex-flow: nowrap;
+        column-gap: 15px;
+        overflow: hidden;
+    }
+
 }  
